src/App.css
:root {
  --big-padding: 40px;
  --black: #111111;
  --white: #ededed;

  --main: "Syne", sans-serif;
  --secondary: "Josefin Sans", sans-serif;
}

body {
  background-color: var(--black);
}

a {
  text-decoration: none;
  color: var(--white);
}

.App {
  text-align: center;
 
  color: var(--white);
  height: 100vh;
  width: 100vw;
  overflow-x: hidden;
  font-family: var(--secondary);
}

.home,
.design,
.photography,
.contact,
.project {
  height: 80vh;
  margin-top: 10vh;
}

.nav,
.footer {
  position: fixed;
  height: 10vh;
  width: 100vw;
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 20px;
  align-content: center;
  box-sizing: border-box;
  padding: var(--big-padding);
}

.footer {
  padding: var(--big-padding);
  z-index: 10;
  bottom: 0;
  left: 0;
}

.nav {
  z-index: 200;
  padding: 0;
  background: #00000000;
}

.nav-menu {
  position: fixed;
  top: 0;
  right: 0;
  padding: var(--big-padding);
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 20px;
  align-content: center;
  box-sizing: border-box;
  z-index: 10;
}

.nav-icon {
  position: absolute;
  top: -10px;
  right: 0;
  padding: 30px;
  z-index: 5000;
  user-select: none;
}

.nav-item {
  font-size: 1.2em;
  padding: 15px;
  border-radius: 2px;
  transition: all 0.2s ease-in-out;
  user-select: none;
}

.nav-item:hover {
  background: #ffffff30;
  cursor: pointer;
}

.name {
  font-weight: 800;
  font-size: 80px;
  text-transform: uppercase;
  position: fixed;
  top: 0;
  left: 0;
  text-align: left;
  padding: var(--big-padding);
  padding-right: 0;
  z-index: 20;
  user-select: none;
  font-family: var(--main);
}

.subtitle {
  user-select: none;
  text-transform: uppercase;
  font-weight: 800;
  position: fixed;
  right: 0;
  bottom: 0;
  padding: var(--big-padding);
  font-family: "Josefin Sans", sans-serif;
}

.location {
  font-size: 52px;
  padding-bottom: 10px;
}
.occupation {
  font-size: 27px;
}

.nav {
  user-select: none;
  justify-content: right;
}

.open {
  transform: rotate(45deg);
}

.open:hover,
.closed:hover {
  cursor: pointer;
  opacity: 0.5;
}

.open,
.closed {
  display: none;
  transition: all 0.2s ease-in-out;
  user-select: none;
}

@media screen and (max-width: 960px) {
  .name {
    font-size: 30px;
  }
  .subtitle {
    right: unset;
    left: 0;
    bottom: 50px;
    font-size: 0.5em;
  }
  .location {
    font-size: 32px;
    padding-bottom: 10px;
  }
  .occupation {
    font-size: 17px;
  }

  .open,
  .closed {
    display: block;
  }

  .nav-menu {
    flex-direction: column;
    justify-content: flex-end;
    height: 100vh;
    width: 100vw;
    position: absolute;
    top: 0vh;
    left: -200%;
    opacity: 1;
    transition: all 0.5s ease;
    gap: 0;
  }

  .nav-menu.active {
    background: var(--black);
    left: 0;
    opacity: 1;
    transition: all 0.5s ease;
    z-index: 50;
    padding-bottom: var(--big-padding);
  }

  .nav-item {
    width: 100vw;
    padding: var(--big-padding);
  }
}

